overflow fix

--- a/BetBookGamingUserInterface/Pages/Index.razor.css
+++ b/BetBookGamingUserInterface/Pages/Index.razor.css
@@ -1,7 +1,7 @@
 ﻿
 
 #hiddenContent {
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .scroll-text {
